# config/config.go
@@ -4,6 +4,7 @@ var Port = ":8080"
 var BasePath = "/api"
 var PathDocs = BasePath + "/docs"
 var PathCreateUser = BasePath + "/user/{nickname}/create"
+var PathProfile = BasePath + "/user/{nickname}/profile"
 
 var Headers = map[string]string{
 	"Access-Control-Allow-Credentials": "true",
