# usecase/usecase.go
@@ -8,6 +8,8 @@ import (
 type UsecaseInterface interface {
 	CreateUser(params *model.User) error
 	GetUsersByUsermodel(params *model.User) ([]*model.User, error)
+	GetProfile(nickname string) (*model.User, error)
+	ChangeProfile(params *model.User) error
 }
 
 type Usecase struct {
@@ -25,4 +27,10 @@ func (api *Usecase) CreateUser(params *model.User) error {
 }
 func (api *Usecase) GetUsersByUsermodel(params *model.User) ([]*model.User, error) {
 	return api.store.GetUsersByUsermodel(params)
+}
+func (api *Usecase) GetProfile(nickname string) (*model.User, error) {
+	return api.store.GetProfile(nickname)
+}
+func (api *Usecase) ChangeProfile(params *model.User) error {
+	return api.store.ChangeProfile(params)
 }
